--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
                 
                 
                     <div class="navbar-nav" class="mx-auto" style="width: 150px;">
-                      <a class="nav-link active" aria-current="page" href="./Index.html">Home</a>
+                      <a class="nav-link active" aria-current="page" href="Index.html">Home</a>
                       <a class="nav-link" href="#">Juegos</a>
                       <a class="nav-link" href="#">noticias</a>
                       <a class="nav-link" href="./contacto.html">Contacto</a>
